# haoplayer

./: .gitignore  android_notes.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_decoder.cpp  audio_decoder.h  audio_device.cpp  audio_device.h  audio_render.cpp  audio_render.h  audio_track.cpp  audio_track.h  bus.h  clock.h  demuxer.cpp  demuxer.h  element.h  ffwrapper.cpp  ffwrapper.h  log.h  player.cpp  player.h  player_jni.cpp  player_jni.h  state.h  utils.h  video_decoder.cpp  video_decoder.h  video_device.cpp  video_device.h  video_render.cpp  video_render.h
app/src/main/java/com/hao/player/: MainActivity.java  Player.java
app/src/main/res/layout/: activity_main.xml  playback.xml
app/src/main/res/values/: strings.xml
